# FeedMaker

./: .dockerignore  .env.example  .environments  .envrc  .gitignore  .gitignore_global  .python-version  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README  README.md  build.sh  collect_coverage.conf  collect_coverage.sh  deploy.sh  deploy_to_k8s.sh  init.sql  k8s_mysql.sh  k8s_mysql_loki.sh  logging.conf  logging.docker.conf  loki-ingress.yml  loki-values.yml  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_in_local.sh  runner_output.txt
.github/: dependabot.yml
.run/: backend.run.xml  deploy.run.xml  test_feed_maker.TestFeedMaker의 Python 테스트.run.xml  test_feed_maker_util.ConfigTest.test_get_global_config의 Python 테스트.run.xml  test_feed_maker_util.ConfigTest의 Python 테스트.run.xml  test_feed_maker_util.ProcessTest의 Python 테스트.run.xml  test_headless_browser.TestHeadlessBrowser의 Python 테스트.run.xml
_torreng/: capture_item_torreng.pl
am7/: capture_item_link_title.pl  post_process_munhwa.pl  post_process_munhwa.pl~
backend/: .env  .env.example  .gitignore  Dockerfile  app.py  audit.py  auth.py  entrypoint.sh  feed_maker_manager.py  feed_manager.py  index.wsgi  logging.conf  main.py  nohup.out.old  openapi_snapshot.json  requirements.txt  startup.sh  uwsgi.ini
bikey/: capture_item_bikey.pl  pre_process_bikey.sh
chosun/: capture_item_chosun.pl
cine21/: capture_item_cine21.pl
clien/: capture_item_clien.pl  post_process_clien.pl
daum/: capture_item_daummovie.pl  capture_item_daumwebtoon.pl  capture_item_daumwebtoon_mobile.pl  download_merge_split.pl  post_process_daumwebtoon.pl
dblp/: capture_item_dblp.pl
dvdprime/: capture_item_dvdprime.pl
focus/: capture_item_fnn.pl  post_process_fnn.pl
frontend/: .env.development.example  .env.production.example  .eslintrc.js  Dockerfile  build-with-version.js  cert.pem  csr.pem  default.conf  eslint.config.js  eslint.config.mjs  generate-version.js  index.html  jest.config.js  key.pem  package-lock.json  package.json  playwright.config.js  vite.config.mjs  vitest.setup.js  vue.config.js  webpack.config.js
hankooki/: capture_item_link_title.pl  post_process_hankooki.pl
ilyo/: capture_item_ilyo.pl~
k8s/: CIS-HARDENING-PLAN.md  apply-config.sh  audit-policy.yaml  cis-hardening-apply.sh  fm-certificate.yml  fm-deployment.yml  fm-networkpolicy.yml  fm-volume.yml  fm.sh  httproute.yml  web-nginx-values.yml
kakao/: capture_item_kakaowebtoon.pl
log/: denied_xml.txt  feed_acceess.txt  feedly.txt  feedmaker.txt  htaccess1_xml.txt  public_html_xml.txt
metro/: capture_item_link_title.pl
moneytoday/: capture_item_kakaotalk.pl  capture_item_moneytoday.pl  post_process_moneytoday.pl
mule/: capture_item_mule.pl
nate/: capture_item_natewebtoonmobile.pl  post_process_natewebtoon.pl
naver/: capture_item_naverblog.pl  capture_item_navercastpc.pl  capture_item_naverwebtoon.pl  capture_item_naverwebtoon_mobile.pl  capture_item_themecast.pl  post_process_naverwebtoon.pl  post_process_naverwebtoon_mobile.pl  post_process_naverwebtoon_ozviewer.pl
ohmynews/: capture_item_ohmynews.pl  post_process_ohmynews.pl
ollehmarket/: capture_item_ollehmarketwebtoon.pl  post_process_ollehmarketwebtoon.pl
ppomppu/: capture_item_ppomppu.pl
scripts/: check_pytest_cov.py
slrclub/: capture_item_slrclub.pl
smilekhan/: capture_item_link_title.pl  post_process_sportskhan.pl
sportschosun/: capture_item_link_title.pl  post_process_sportschosun.pl
sportsdonga/: capture_item_link_title.pl
sportskhan/: capture_item_link_title.pl  post_process_sportskhan.pl
sportsseoul/: capture_item_link_title.pl  post_process_sportsseoul.pl
sportsseouli/: capture_item_link_title.pl  post_process_sportsseouli.pl
steam/: capture_item_steam.pl
stoo/: capture_item_stoo.pl  capture_item_stoo2.pl  post_process_stoo.pl
stubs/: PyRSS2Gen.pyi  mail1.pyi
test/: FeedMaker.t  Makefile  capture_item_link_title.py  collection.t  conf.json  conf.naverwebtoon.completed.json  conf.naverwebtoon.json  conf.xml  crawler.t  crawler1.t  crawler2.t  crawler3.t  daum.webtoon.1.html  daum.webtoon.1.html.processed  daum.webtoon.2.list.extracted  daum.webtoon.2.list.html  daum.webtoon.2.list.txt  extract.t  extraction.t  feed_maker_util.t  feedmakerutil.t  global_config_line_messenger.json  global_config_minimal.json  global_config_naver_email.json  global_config_nhn_email.json  global_config_nhn_smtp.json  (+86 more)
www/: README.md  (+9 more)
(+1069 files in other folders)
