[project]
name = "fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "cairosvg>=2.8.2",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "feedparser>=6.0.12",
    "filelock>=3.20.0",
    "lxml>=6.0.2",
    "mail1>=4.1.0",
    "mypy>=1.19.1",
    "ordered-set>=4.1.0",
    "pdf2image>=1.17.0",
    "pdftotext>=3.0.0",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pyheif>=0.8.0",
    "pymysql>=1.1.2",
    "pyrss2gen>=1.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.43",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
py_version = 312
skip = ["__init__.py"]
skip_glob = ["migrations/*"]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:schemathesis.*",
    "ignore::DeprecationWarning:jsonschema.*",
]

[tool.mypy]
python_version = "3.12"
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = false
#follow_imports = skip
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
#warn_return_any = true
# 심각도 높은 오류만 표시
show_error_codes = true
error_summary = true
# 로컬 타입 스텁 디렉토리 설정
mypy_path = "stubs"
# stubs 디렉토리 제외
exclude = ["stubs/"]
# 낮은 심각도 오류 비활성화
disable_error_code = ["misc", "no-redef", "override", "assignment", "type-arg", "type-abstract", "attr-defined"]

# 특정 모듈에 대한 타입 체크 완화
[[tool.mypy.overrides]]
module = ["PyRSS2Gen", "mail1", "selenium.*"]
ignore_errors = true

[tool.pylint."master"]
ignore = [
    ".github/*",
    "idea/*",
    ".mypy_cache/*",
    ".run/*",
    "frontend/*",
    "out/*",
    "stubs/*",
]

[tool.pylint."messages control"]
# 심각도 높은 오류만 표시 (Error만 활성화)
enable = ["E"]
# Warning, Convention, Refactor 비활성화
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-boolean-expressions",
    "too-many-nested-blocks",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-boolean-expressions",
    "too-many-nested-blocks",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-boolean-expressions",
    "too-many-nested-blocks",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "too-few-public-methods",
    "logging-fstring-interpolation",
    "invalid-name",
    "protected-access",
    "arguments-renamed",
    "import-error",
    "trailing-whitespace",
    "consider-using-f-string",
    "duplicate-code",
]
extension-pkg-allow-list = ["pdftotext"]

# Pyright 설정 (Cursor IDE 등에서 사용)
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"  # basic, standard, strict 중 선택
stubPath = "stubs"
# 라이브러리 타입 스텁 문제 완화
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
# unittest 모듈 관련 오류 완화
reportCallIssue = "none"

# 단축 스크립트 명령어들
[tool.scripts]
# 사용법: python -m tool.scripts.lint_errors
lint-errors = "pylint --errors-only"
type-errors = "mypy --show-error-codes"
check-critical = "mypy --show-error-codes && pylint --errors-only"

[dependency-groups]
dev = [
    "modulegraph>=0.19.6",
    "pytest>=8.4.2",
]
